--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -148,7 +148,7 @@ table {
 }
 
 header {
-  z-index: 1;
+  z-index: 3;
   background-color: #0A014F;
   display: flex;
   flex-wrap: wrap;
@@ -166,16 +166,16 @@ header {
 .logo {
   display: flex;
   justify-content: flex-start;
-  width: 25%;
+  width: 35%;
   height: 100%;
 }
 .logo img {
-  width: 90%;
+  width: 100%;
 }
 
 .menu-cart {
   display: flex;
-  width: 30%;
+  width: 25%;
   justify-content: flex-end;
 }
 
@@ -183,7 +183,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 50%;
+  width: 100%;
 }
 .menu-cart-wrapper .navbar-toggler,
 .menu-cart-wrapper .cart {
@@ -191,12 +191,14 @@ header {
   align-items: center;
   justify-content: center;
   width: 45%;
+  color: #E0BE36;
 }
 .menu-cart-wrapper button {
   border-radius: 0px;
 }
-.menu-cart-wrapper button .fa-solid {
-  font-size: 0.5em;
+
+.fa-solid {
+  font-size: 1em;
 }
 
 .offcanvas.show:not(.hiding) {
@@ -216,6 +218,43 @@ header {
   position: static;
 }
 
+@media screen and (min-width: 460px) {
+  .logo {
+    width: 30%;
+  }
+
+  .fa-solid {
+    font-size: 1.2em;
+  }
+}
+@media screen and (min-width: 720px) {
+  .logo {
+    width: 20%;
+  }
+
+  .menu-cart {
+    width: 20%;
+  }
+
+  .fa-solid {
+    font-size: 1.5em;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .navbar {
+    margin: 0.5%;
+    padding: 0.5%;
+  }
+
+  .logo,
+.menu-cart {
+    width: 10%;
+  }
+
+  .fa-solid {
+    font-size: 2em;
+  }
+}
 /* banner for mobile  */
 html {
   height: auto;
@@ -329,8 +368,27 @@ img:nth-child(2) {
 }
 
 @media (min-width: 576px) {
+  .search-section {
+    padding: 1%;
+  }
+
   .date-wrapper {
     justify-content: center;
+    padding: 1%;
+  }
+
+  .search-form {
+    border-radius: 1%;
+    margin: 1%;
+    padding: 1%;
+  }
+  .search-form button[type=submit] {
+    margin: 1%;
+    padding: 1%;
+  }
+
+  .search-input {
+    padding: 1%;
   }
 }
 .about-section {
@@ -395,13 +453,25 @@ img:nth-child(2) {
 }
 
 .travel-categories {
-  background: url("/images/travelbkgd.svg");
-  background-size: cover;
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: center;
   position: relative;
+}
+.travel-categories .row {
+  justify-content: center;
+}
+.travel-categories .card {
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  border: 1px solid #0A014F;
+  background-color: transparent;
+}
+.travel-categories .card .card-body {
+  padding: 1%;
+  text-align: center;
 }
 
 .travel-categories-wrapper {
@@ -409,14 +479,6 @@ img:nth-child(2) {
   flex-direction: column;
   width: 90%;
   z-index: 1;
-}
-
-.card {
-  width: 100%;
-  height: auto;
-  justify-content: center;
-  border: 1px solid #0A014F;
-  background-color: transparent;
 }
 
 .travel-categories-title {
@@ -449,15 +511,22 @@ img:nth-child(2) {
 }
 
 /** For mobile devices **/
-@media (max-width: 767px) {
-  .custom-shape-divider-bottom-1655159955 svg {
-    width: calc(100% + 1.3px);
-    height: 36px;
+@media (min-width: 767px) {
+  .travel-categories-title {
+    display: flex;
+    width: 100%;
+    height: auto;
+    color: #0A014F;
+    margin: 1% 1% 2% 0%;
+    padding: 1% 1% 2% 0%;
+  }
+
+  .row {
+    justify-content: flex-start;
   }
 }
 .current-offers {
   display: flex;
-  background: url("/images/offersbkgd2.svg");
   width: 100%;
   background-size: cover;
   justify-content: center;
@@ -501,9 +570,15 @@ img {
   height: auto;
 }
 
+.shop-section {
+  display: flex;
+  justify-content: center;
+}
+
 .shop-wrapper {
   display: flex;
   justify-content: center;
+  width: 90%;
 }
 
 .shop {
@@ -634,7 +709,6 @@ img {
   }
 }
 .hotel-carousel {
-  background: url("/images/hotelbkgd.svg");
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -723,61 +797,57 @@ img {
   margin: 3%;
   padding: 2%;
   text-align: center;
-  width: 80%;
+  width: 70%;
 }
-
 .sign-up-form h2 {
   text-align: center;
   line-height: 2rem;
   margin-top: -0.5rem;
-  color: white;
+  color: #0A014F;
   font-family: Playfair;
   font-size: 1.5rem;
   font-style: italic;
 }
-
 .sign-up-form p {
   line-height: 1.5rem;
-  color: white;
+  color: #0A014F;
   font-family: Raleway;
 }
-
-.sign-up form {
+.sign-up-form form {
   display: flex;
   justify-content: end;
-  min-width: 90%;
+  width: 70%;
   position: relative;
 }
-.sign-up button[type=submit],
-.sign-up input[type=email] {
+.sign-up-form button[type=submit],
+.sign-up-form input[type=email] {
   border-radius: 1rem;
 }
-.sign-up input[type=email] {
-  border: 0px;
+.sign-up-form input[type=email] {
+  border: 1px solif #0A014F;
   width: 100%;
   width: 100%;
   padding: 0px 0px 0px 10%;
   box-sizing: border-box;
 }
-.sign-up input::placeholder {
-  color: #e2574c;
+.sign-up-form input::placeholder {
+  color: #0A014F;
   font-size: 0.8em;
   font-style: italic;
   padding: 0px;
   margin: 0px;
 }
-.sign-up button[type=submit] {
+.sign-up-form button[type=submit] {
   font-size: 0.8em;
-  background: #e2574c;
+  background: #0A014F;
   border: 0px;
   position: absolute;
-  color: white;
+  color: #E0BE36;
   align-self: center;
   height: 100%;
 }
 
 .sign-up-image-background {
-  background-image: url(/images/wave-bkgd.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom center;
@@ -790,11 +860,27 @@ img {
   height: auto;
 }
 
+@media (min-width: 576px) {
+  .sign-up-form {
+    width: 70%;
+  }
+  .sign-up-form form {
+    width: 50%;
+  }
+}
+@media (min-width: 940px) {
+  .sign-up-form {
+    width: 50%;
+  }
+  .sign-up-form form {
+    width: 50%;
+  }
+}
 /* footer mobile */
 footer {
   display: flex;
   flex-wrap: wrap;
-  background: #0A014F;
+  background-color: #0A014F;
   color: white;
   width: 100%;
   justify-content: center;
