--- a/src/scss/_caroussel.scss
+++ b/src/scss/_caroussel.scss
@@ -1,5 +1,5 @@
 .hotel-carousel {
-    background: url('/images/hotelbkgd.svg');
+   // background: url('/images/hotelbkgd.svg');
     background-size: cover;
     display: flex;
 
