--- a/src/scss/_offers.scss
+++ b/src/scss/_offers.scss
@@ -1,6 +1,6 @@
 .current-offers {
     display: flex;
-    background: url('/images/offersbkgd2.svg');
+   // background: url('/images/offersbkgd2.svg');
     width: 100%;
     background-size: cover;
     justify-content: center;
