--- a/src/scss/_categories.scss
+++ b/src/scss/_categories.scss
@@ -3,9 +3,15 @@ img {
     height: auto;
 }
 
+.shop-section {
+    display: flex;
+    justify-content: center;
+}
+
 .shop-wrapper {
     display: flex;
     justify-content: center;
+    width: 90%;
 }
 
 .shop {
