--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -3,7 +3,7 @@
 footer {
     display: flex;
     flex-wrap: wrap;
-    background: $darkblue;
+    background-color:$darkblue;
     color: white;
     width: 100%;
     justify-content: center;
