--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -14,7 +14,7 @@
  }
 
  header {
-     z-index: 1;
+     z-index: 3;
      background-color: $darkblue;
      display: flex;
      flex-wrap: wrap;
@@ -32,17 +32,17 @@
  .logo {
      display: flex;
      justify-content: flex-start;
-     width: 25%;
+     width: 35%;
      height: 100%;
 
      img {
-         width: 90%;
+         width: 100%;
      }
  }
 
  .menu-cart {
      display: flex;
-     width: 30%;
+     width: 25%;
      justify-content: flex-end;
  }
 
@@ -50,7 +50,7 @@
      display: flex;
      flex-direction: row;
      justify-content: space-evenly;
-     width: 50%;
+     width: 100%;
 
      .navbar-toggler,
      .cart {
@@ -58,16 +58,19 @@
          align-items: center;
          justify-content: center;
          width: 45%;
+         color: $yellow;
 
      }
 
      button {
          border-radius: 0px;
 
-         .fa-solid {
-             font-size: 0.5em;
-         }
+
      }
+ }
+
+ .fa-solid {
+     font-size: 1em;
  }
 
  .offcanvas.show:not(.hiding) {
@@ -91,52 +94,61 @@
  }
 
  @media screen and (min-width:460px) {
+     .logo {
+         width: 30%;
+     }
 
-     .menu-cart-wrapper {
+     .menu-cart {
          //  width: 120px;
          //  height: 40px;
 
-         button,
-         .cart {
-             //  width: 40px;
-             //  height: 40px;
-         }
-
-         button {
-             .fa-solid {
-                 //  font-size: 1.6em;
-             }
-         }
      }
+
+
+     .fa-solid {
+         font-size: 1.2em;
+     }
+
+
 
 
  }
 
 
- @media screen and (min-width:820px) {
-     .menu-cart-wrapper {
-         //  width: 150px;
-         //  height: 50px;
+ @media screen and (min-width:720px) {
 
-         button,
-         .cart {
-             //  width: 50px;
-             //  height: 50px;
-         }
-
+     .logo {
+         width: 20%;
      }
 
+     .menu-cart {
+
+         width: 20%;
+     }
+
+     .fa-solid {
+         font-size: 1.5em;
+     }
 
  }
 
 
- @media screen and (min-width:1240px) {
-     .menu-cart-wrapper {
-         button {
-             .fa-solid {
-                 //  font-size: 2.5em;
-             }
-         }
+ @media screen and (min-width:1000px) {
+
+     .navbar {
+         margin: 0.5%;
+         padding: 0.5%;
+
+     }
+
+     .logo,
+     .menu-cart {
+         width: 10%;
+
+     }
+
+     .fa-solid {
+         font-size: 2em;
      }
 
 
