--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -4,6 +4,8 @@
     align-items: center;
     padding: 2%;
     background-image: url('/images/search.svg');
+
+
 }
 
 .search-form {
@@ -41,9 +43,10 @@
 
 @media (min-width: 576px) {
 
-    .search-section{
-        padding:1%;
+    .search-section {
+        padding: 1%;
     }
+
     .date-wrapper {
         justify-content: center;
         padding: 1%;
@@ -56,6 +59,12 @@
         margin: 1%;
         padding: 1%;
 
+
+
+        width: 60%;
+
+
+
         button[type=submit] {
             margin: 1%;
             padding: 1%;
@@ -65,5 +74,16 @@
     .search-input {
         padding: 1%;
     }
+
+}
+
+
+@media (min-width: 900px) {
+    .search-section {}
+
+    .search-form {
+        width: 50%;
+    }
+
 
 }
