--- a/src/scss/_travelcategories.scss
+++ b/src/scss/_travelcategories.scss
@@ -42,12 +42,14 @@
 
 
 .travel-categories-title {
+    font-family: 'Abril Fatface', cursive;
+    text-transform: uppercase;
+    font-size: 1em;
     display: flex;
     width: 100%;
     height: auto;
     color: $darkblue;
-    margin: 2% 2% 3% 0%;
-    padding: 2% 2% 3% 0%;
+
 }
 
 .custom-shape-divider-bottom-1655159955 {
