--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,8 @@
 @import 'reset';
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alfa+Slab+One&family=Anton&family=Fjalla+One&family=Righteous&display=swap');
 @import 'colors';
+@import 'titles';
+@import 'wrappers';
 @import 'nav';
 @import 'banner';
 @import 'search';
