--- a/src/scss/_categories.scss
+++ b/src/scss/_categories.scss
@@ -6,10 +6,14 @@ img {
 .shop-section {
     display: flex;
     justify-content: center;
+    display: flex;
+    align-items: center;
+
 }
 
 .shop-wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     width: 90%;
 }
