--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -125,7 +125,7 @@ footer {
 
     .copyright {
         align-items: center;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
     }
 
