--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 2%;
-    background-image: url('/images/search.svg');
+    background-image: url('./images/search.svg');
 
 
 }
