--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 2%;
-    background-image: url('./images/search.svg');
+    background-color: $darkblue;
 
 
 }
@@ -15,9 +15,10 @@
     width: 90%;
     margin: 2%;
     padding: 2%;
+    background-color: $yellow;
     border: 1px solid $darkblue;
     border-radius: 3%;
-    background-color: white;
+    // background-color: white;
 
     button[type=submit] {
         height: auto;
