--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -189,9 +189,11 @@ label {
     font-size: 5em;
     margin-bottom: 4%;
   }
+
   .carousel-caption > p {
     font-size: 2em;
   }
+
   .travel-categories-title,
 .carousel-text,
 .current-offers-title,
@@ -199,13 +201,16 @@ label {
 .shop-title {
     font-size: 1.5em;
   }
+
   .cat,
 .card-title {
     font-size: 1.2em;
   }
+
   .categories .card-title {
     font-size: 1em;
   }
+
   .card-text,
 .sign-up-form > p,
 .social,
@@ -220,9 +225,11 @@ label {
     font-size: 9em;
     margin-bottom: 4%;
   }
+
   .carousel-caption > p {
     font-size: 4em;
   }
+
   .travel-categories-title,
 .carousel-text,
 .current-offers-title,
@@ -230,10 +237,12 @@ label {
 .shop-title {
     font-size: 2.5em;
   }
+
   .cat,
 .card-title {
     font-size: 1.2em;
   }
+
   .carousel .card-text,
 .sign-up-form > p,
 .social,
@@ -334,10 +343,15 @@ header {
   position: static;
 }
 
+.navbar-toggler {
+  visibility: hidden;
+}
+
 @media screen and (min-width: 460px) {
   .logo {
     width: 30%;
   }
+
   .fa-solid {
     font-size: 1.2em;
   }
@@ -346,11 +360,17 @@ header {
   .logo {
     width: 20%;
   }
+
   .menu-cart {
     width: 20%;
   }
+
   .fa-solid {
     font-size: 1.5em;
+  }
+
+  .navbar-toggler {
+    visibility: visible;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -358,10 +378,12 @@ header {
     margin: 0.5%;
     padding: 0.5%;
   }
+
   .logo,
 .menu-cart {
     width: 10%;
   }
+
   .fa-solid {
     font-size: 2em;
   }
@@ -380,10 +402,6 @@ html {
 video {
   width: 100%;
   height: auto;
-}
-
-.offcanvas {
-  display: none;
 }
 
 .new-section {
@@ -467,6 +485,9 @@ img:nth-child(2) {
   padding: 2%;
   background-color: #0A014F;
   color: #E0BE36;
+  display: flex;
+  width: 25%;
+  justify-content: center;
 }
 
 .date-wrapper,
@@ -482,10 +503,12 @@ img:nth-child(2) {
   .search-section {
     padding: 1%;
   }
+
   .date-wrapper {
     justify-content: center;
     padding: 1%;
   }
+
   .search-form {
     border-radius: 1%;
     margin: 1%;
@@ -496,6 +519,7 @@ img:nth-child(2) {
     margin: 1%;
     padding: 1%;
   }
+
   .search-input {
     padding: 1%;
   }
@@ -588,11 +612,8 @@ img:nth-child(2) {
   text-align: center;
 }
 
-.travel-categories-wrapper {
+.cat-col {
   display: flex;
-  flex-direction: column;
-  width: 90%;
-  z-index: 1;
 }
 
 .travel-categories-title {
@@ -635,6 +656,7 @@ img:nth-child(2) {
     margin: 1% 1% 2% 0%;
     padding: 1% 1% 2% 0%;
   }
+
   .row {
     justify-content: flex-start;
   }
@@ -797,21 +819,25 @@ img {
 .womens-category {
     grid-column-end: 3;
   }
+
   .trends-category,
 .glasses-category {
     grid-row-start: 1;
     grid-row-end: 2;
   }
+
   .trends-category,
 .sales-category {
     grid-column-start: 3;
     grid-column-end: 4;
   }
+
   .glasses-category,
 .bags-category {
     grid-column-start: 4;
     grid-column-end: 5;
   }
+
   .womens-category,
 .bags-category,
 .sales-category {
@@ -986,6 +1012,7 @@ img {
   .sign-up-form form {
     width: 50%;
   }
+
   .sign-up-form > p {
     line-height: 2.5rem;
   }
@@ -1027,6 +1054,7 @@ footer {
 .address {
   flex-direction: column;
   align-items: center;
+  line-height: 2;
 }
 .address p {
   align-items: center;
@@ -1056,10 +1084,12 @@ footer {
     flex-direction: row;
     width: 100%;
   }
+
   .social,
 .address {
     width: 40%;
   }
+
   .address {
     justify-content: center;
   }
@@ -1070,6 +1100,7 @@ footer {
     margin: 2%;
     padding: 2%;
   }
+
   .social ul {
     flex-direction: column;
     align-items: flex-start;
@@ -1096,16 +1127,19 @@ footer {
   .contact {
     justify-content: space-evenly;
   }
+
   .copyright {
     align-items: center;
     flex-direction: column;
     justify-content: center;
   }
+
   .social,
 .address {
     min-width: 25%;
     width: 25%;
   }
+
   .address,
 .address a,
 .address p,
