--- a/src/scss/_travelcategories.scss
+++ b/src/scss/_travelcategories.scss
@@ -29,14 +29,11 @@
 
 }
 
+.cat-col{
+    display:flex;
+} 
+   
 
-
-.travel-categories-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    z-index: 1;
-}
 
 
 
