--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -30,6 +30,7 @@ footer {
 .address {
     flex-direction: column;
     align-items: center;
+    line-height: 2;
 
     p {
         align-items: center;
@@ -37,7 +38,7 @@ footer {
 }
 
 .address a,
-.social a {
+.social a { 
     color: white;
 }
 
