--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -488,6 +488,7 @@ img:nth-child(2) {
   display: flex;
   width: 25%;
   justify-content: center;
+  align-items: center;
 }
 
 .date-wrapper,
@@ -606,6 +607,9 @@ img:nth-child(2) {
   justify-content: center;
   border: 1px solid #0A014F;
   background-color: transparent;
+}
+.travel-categories .card .card-img-top {
+  height: 100%;
 }
 .travel-categories .card .card-body {
   padding: 1%;
@@ -728,33 +732,33 @@ img {
   position: relative;
 }
 
-.trends-category,
-.glasses-category,
-.sales-category,
-.bags-category,
-.men-category,
-.womens-category {
+.africa-category,
+.europe-category,
+.northamerica-category,
+.southamerica-category,
+.asia-category,
+.oz-category {
   position: relative;
 }
 
-.trends-category,
-.glasses-category,
-.sales-category,
-.bags-category {
+.africa-category,
+.europe-category,
+.northamerica-category,
+.southamerica-category {
   display: flex;
   border: 1px solid white;
   justify-content: center;
   align-items: center;
 }
-.trends-category img,
-.glasses-category img,
-.sales-category img,
-.bags-category img {
+.africa-category img,
+.europe-category img,
+.northamerica-category img,
+.southamerica-category img {
   position: relative;
 }
 
-.men-category,
-.womens-category {
+.asia-category,
+.oz-category {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -764,36 +768,36 @@ img {
   grid-column-end: 5;
 }
 
-.men-category {
+.asia-category {
   grid-row-start: 1;
   grid-row-end: 2;
 }
 
-.trends-category,
-.glasses-category {
+.africa-category,
+.europe-category {
   grid-row-start: 2;
   grid-row-end: 3;
 }
 
-.sales-category,
-.bags-category {
+.northamerica-category,
+.southamerica-category {
   grid-row-start: 3;
   grid-row-end: 4;
 }
 
-.womens-category {
+.oz-category {
   grid-row-start: 4;
   grid-row-end: 5;
 }
 
-.trends-category,
-.sales-category {
+.africa-category,
+.northamerica-category {
   grid-column-start: 1;
   grid-column-end: 3;
 }
 
-.glasses-category,
-.bags-category {
+.europe-category,
+.southamerica-category {
   grid-column-start: 3;
   grid-column-end: 5;
 }
@@ -815,32 +819,32 @@ img {
 }
 
 @media (min-width: 600px) {
-  .men-category,
-.womens-category {
+  .asia-category,
+.oz-category {
     grid-column-end: 3;
   }
 
-  .trends-category,
-.glasses-category {
+  .africa-category,
+.europe-category {
     grid-row-start: 1;
     grid-row-end: 2;
   }
 
-  .trends-category,
-.sales-category {
+  .africa-category,
+.northamerica-category {
     grid-column-start: 3;
     grid-column-end: 4;
   }
 
-  .glasses-category,
-.bags-category {
+  .europe-category,
+.southamerica-category {
     grid-column-start: 4;
     grid-column-end: 5;
   }
 
-  .womens-category,
-.bags-category,
-.sales-category {
+  .oz-category,
+.southamerica-category,
+.northamerica-category {
     grid-row-start: 2;
     grid-row-end: 3;
   }
